style.css
*{
    box-sizing: border-box;
    background: #22252A;
}
body{
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1rem;
    line-height: 1.5rem;
    color: #333333;
    overflow-x: hidden;
}
.v-header{
    height: 100vh;
    display: flex;
    align-items: center;
    color: white;
}
.container{
    max-width: 960px;
    padding-left: 1rem;
    padding-right: 1rem;
    margin: auto;
    text-align: center;
}
p strong{
    background: none;
}
.fullscreen-video-wrap{
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    overflow: hidden;
}
.fullscreen-video-wrap video{
    width: auto;
    height: auto;
    max-height: 150%;
}
.header-overlay{
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;
    left: 0;
    background: #22252A;
    z-index: 1;
    opacity: 0.45;
}
.header-content{
    z-index: 2;
    background: none;
}
.header-content h1{
    z-index: 2;
    background: none;
    font-size: 3rem;
    margin-bottom: 2rem;
}
.header-content p{
    z-index: 2;
    background: none;
    font-size: 1.2rem;
    display: block;
    padding-bottom: 1rem;
}
.welcome-header{
    color: #f1e6ff;
}
.welcome-text{
    color: #f1e6ff;
}
.btn{
    background: #333942;
    color: white;
    font-size: 1.2rem;
    padding: 1rem 2rem;
    text-decoration: none;
    border-radius: 10px;
    transition: all 0.1s ease 0s;
}
.section-divider{
    height: 6px;
    width: auto;
    background: none;
    z-index: 10;
}
.btn:hover{
    background: #414a58;
    color: #ffffff;
}
.btn-projects{
    background: #4e76b8;
}
.btn-projects:hover{
    background: rgb(139, 184, 255);
}
.btn-about{
    background: #884bd8;
}
.btn-about:hover{
    background: #b582f8;
}
section{
    padding: 15px 0;
}
@media(max-width:960px){
    .container{
        padding-right: 3rem;
        padding-left: 3rem;
    }
    .header-button{
        padding-right: 2rem;
        padding-left: 2rem;
        line-height: 4rem;
    }
}

